syntax = "proto3";
package prodvana.release;
option go_package = "github.com/prodvana/prodvana-public/go/prodvana-sdk/proto/prodvana/release";
import "google/api/annotations.proto";
import "prodvana/object/meta.proto";
import "prodvana/release/object.proto";
import "validate/validate.proto";

message RecordReleaseReq {
    ReleaseConfig config = 1 [(validate.rules).message.required = true];
    // If true, create release with pending status that is meant to be updated later to either success or failure.
    // By default, releases are created with status SUCCEEDED.
    bool pending = 2;
}

message RecordReleaseResp {
    prodvana.object.ObjectMeta meta = 1;
}

message UpdateReleaseStatusReq {
    string release_id = 1;
    ReleaseStatus status = 2;
}

message UpdateReleaseStatusResp {
    ReleaseStatus status = 1;
}

message ListReleasesReq {
    message Filter {
        // filters to releases for join(join(services, OR), join(release_channels, OR), AND)
        repeated string services = 1;
        repeated string release_channels = 2;
    }
    // filters for listing releases. Multiple filters are OR'ed together.
    repeated Filter filters = 1;
    Filter filter = 2; // escape hatch to support openAPI, which cannot handle repeated list of messages on GET requests. This is joined to the filters list with an OR.

    string starting_release_id = 3; // newer release, inclusive
    string ending_release_id = 4; // older release, exclusive

    string page_token = 5;
    int32 page_size = 6;
}

message ListReleasesResp {
    repeated Release releases = 1;
    string next_page_token = 2;
}

service ReleaseManager {
    rpc RecordRelease(RecordReleaseReq) returns (RecordReleaseResp) {
        option (google.api.http) = {
            post: "/v1/releases"
            body: "*"
        };
    }
    rpc UpdateRelease(UpdateReleaseStatusReq) returns (UpdateReleaseStatusResp) {
        option (google.api.http) = {
            post: "/v1/releases/{release_id=*}/status"
            body: "*"
        };
    }
    rpc ListReleases(ListReleasesReq) returns (ListReleasesResp) {
        option (google.api.http) = {
            get: "/v1/releases"
        };
    }
    // page tokens arguments are ignored here
    rpc ListReleasesStream(ListReleasesReq) returns (stream ListReleasesResp) {}
}
