syntax = "proto3";
package prodvana.template;
option go_package = "github.com/prodvana/prodvana-public/go/prodvana-sdk/proto/prodvana/template";

import "prodvana/object/meta.proto";
import "prodvana/service/service_config.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

message ServiceTemplate {
    prodvana.object.ObjectMeta meta = 1;
    google.protobuf.Timestamp last_update_timestamp = 2;
    prodvana.service.ServiceConfig service_config = 3 [(validate.rules).message.skip = true];
}
